<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planar_pyworkspace</name>
  <version>1.0.0</version>
  <description>Planar workspace package for defining a 2D workplane and running visualizations</description>
  <maintainer email="noora.sassali@gmail.com">root</maintainer>
  <license>Apache License v2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- Marker packages, exclude if not used -->
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <!-- Visualization dependencies, exclude if not used -->
  <exec_depend>planar_pyworkspace_interfaces</exec_depend>
  <exec_depend>pose_detection_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
